ping/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping
  labels:
    app: ping
spec:
  selector:
    app: ping
  ports:
    - name: http
      port: 8080
      targetPort: 8080
