ping/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ping.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping
                port:
                  number: 8080
